# BrainDashboard

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
deploy/env/: backend.env.example  frontend.env.example
deploy/etc/: gpu-profiles.yaml.example
deploy/git-hooks/: post-merge
deploy/sbin/: braindashboard-gpu-profile  braindashboard-migrate
deploy/sudoers/: braindashboard-gpu-profile  braindashboard-service-restart
deploy/systemd/: braindashboard-api.service  braindashboard-frontend.service  braindashboard-worker.service
docs/: DEPLOYMENT.md  JOB_EVENT_CONTRACT.md
docs/architecture/: README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/data/: dashboard.ts
frontend/src/lib/: api.ts
frontend/src/pages/: HardwarePage.tsx  JobsPage.tsx  ServicesPage.tsx  jobRunDisplay.ts
migrations/: README.md  env.py
migrations/versions/: 20260526_0001_job_definitions.py  20260529_0002_job_runs.py  20260529_0003_hardware_telemetry.py
src/braindashboard/: __main__.py  main.py  worker.py
src/braindashboard/adapters/: __init__.py  home_assistant.py  nvidia.py  services.py
src/braindashboard/collectors/: __init__.py  docker.py  gpu.py  (+6 more)
tests/: test_gpu_profile_wrapper.py  test_gpu_profiles.py  test_hardware.py  test_hardware_monitoring.py  test_health.py  test_job_events.py  test_jobs.py  test_llama_swap.py  test_native_executor.py  test_scheduler_process_mode.py  test_scheduler_stream_parsing.py  test_services.py  test_vllm_metrics.py
(+20 files in other folders)
