[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "braindashboard"
version = "0.1.0"
description = "Homelab ML server dashboard, scheduler, and orchestrator."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.30,<1",
    "docker>=7,<8",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "psutil>=6,<8",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "python-dotenv>=1,<2",
    "sqlalchemy[asyncio]>=2,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.8,<1",
    "types-psutil>=6,<8",
]
gpu = [
    "nvidia-ml-py>=12.560,<13",
]

[project.scripts]
braindashboard = "braindashboard.__main__:main"
braindashboard-worker = "braindashboard.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/braindashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_configs = true
packages = ["braindashboard"]
